--- a/css/crew.css
+++ b/css/crew.css
@@ -18,9 +18,14 @@
 body {
 	font-family: 'Bellefair', serif;
 	font-family: 'Barlow', sans-serif;
+	background-image: url(../images/back-img-moon.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 .containers {
 	max-width: 1147px;
 	margin: 0 auto;
 	padding: 0 20px;
+	
 }
+
