--- a/css/technology.css
+++ b/css/technology.css
@@ -16,10 +16,16 @@
 	box-sizing: border-box;
 }
 body {
+	background-image: url(/images/bgpic.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+ background-position: center top;
+ 
 	font-family: 'Bellefair', serif;
 	font-family: 'Barlow', sans-serif;
 }
 .containers {
+
 	max-width: 1147px;
 	margin: 0 auto;
 	padding: 0 20px;
